--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "main": "app.js",
+  "engines":{
+    "node": "16.14.2",
+    "npm": "8.11.0"
+  },
   "scripts": {
     "start": "node app.js",
+    "build-prisma": "prisma generate",
+    "build-react": "cd client && npm install && npm run build",
+    "heroku-postbuild": "npm run build-react && npm run build-prisma",
+    "install-all": "npm install && cd client && npm install",
     "dev": "nodemon app.js"
   },
   "keywords": [],
